deploy/infra/postgresql/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pgsql-gw
  namespace: envoy-gateway
  annotations:
    metallb.io/address-pool: internal
    external-dns.alpha.kubernetes.io/hostname: "psql.synera.com.br"
    external-dns.alpha.kubernetes.io/target: "192.168.0.170"
spec:
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: tcp-proxy
  listeners:
  - name: postgres
    protocol: TCP
    port: 5432
    allowedRoutes:
      namespaces:
        from: All
