deploy/infra/postgresql/templates/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres-route
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "psql.synera.com.br"
    external-dns.alpha.kubernetes.io/target: "192.168.0.160"
spec:
  parentRefs:
  - name: pgsql-gw
    sectionName: postgres
    namespace: envoy-gateway
  rules:
  - backendRefs:
    - name: postgresql
      port: 5432
